--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
+  color: white;
 }
 </style>
 </head>
 <body>
 
-<h1>YAYYY I HOPE THIS WORKS</h1>
+<h1>きょうわ</h1>
 <p>A website created by me.</p>
 
 </body>
