Added more functionalities
- Synchronous execution for text
- Preliminary book opening function
SPOOKY SCARY SKELETONS, SEND SHIVERS DOWN YOUR SPINE

--- a/index.html
+++ b/index.html
@@ -76,16 +76,31 @@ You sling the basket onto your back and pick up your cleaning tools. Time to beg
   [1][2][3][5][6][7][8]
 </script>
 
-<!-- EXTRANEOUS-->
-<script id="command" type="text/plain">
-Commands:
-    [i] - access your inventory
-    [e] - access the book
-    [#] - pick a grave based on the number; [1][2][3][5][6][7][8]
-    [g] - check which graves you have visited already
-    [esc] - end the game
-    [space] - speed up text writing
-</script>
+<!-- HTML for the book -->
+<script id="book" type="text/html">
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <!-- change the font size to be bigger -->
+    <style>
+      body {
+        font-family: "Courier New";
+        background-color: black;
+        color: white;
+      }
+      </style>
+  <meta charset="UTF-8"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <title> Book </title>
+  </head>
+  <body>
+  <h1>Book!</h1>
+  <p>
+    Book opened: :D
+  </p>
+  </body>
+  </html>
+  </script>
 
 <!------------------------------------------------------------------------------------------------------------------------------------>
 
