Added more story text and countdown function
i wish to sleep
booooooo
yay celeste!

--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@ You sling the basket onto your back and pick up your cleaning tools. Time to beg
   <body>
   <h5>Inventory:</h5>
   <pre>
-      [m] - Manuscript of the Lotus Sutra
-      [p] - Bouquet of plum blossoms
-      [] - 
-      [k] - Kabuki mask
       [b] - Buddhist prayer beads
+      [f] - a small banquet of food
       [h] - Kabuto, the helmet piece of traditional Japanese armor
+      [m] - Manuscript of the Lotus Sutra
+      [s] - calligraphy brush and inkstick
+      [k] - Kabuki mask
+      [p] - Bouquet of plum blossoms
+      
   </pre>
   </body>
   </html>
