--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ You sling the basket onto your back and pick up your cleaning tools. Time to beg
     [e] - access the book
     [#] - pick a grave based on the number; [1][2][3][5][6][7][8]
     [g] - check which graves you have visited already
+    [r] - restart the game
     [esc] - end the game
     [space] - speed up text writing
 </pre>
@@ -100,8 +101,7 @@ You sling the basket onto your back and pick up your cleaning tools. Time to beg
       [m] - Manuscript of the Lotus Sutra
       [s] - calligraphy brush and inkstick
       [k] - Kabuki mask
-      [p] - Bouquet of plum blossoms
-      
+      [p] - Bouquet of plum blossoms 
   </pre>
   </body>
   </html>
