--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@ body {
   background-color: black;
   color: white;
 }
+
+#scroll {
+  width: 95%;
+      overflow-y: auto;
+      padding: 10px;
+}
+
+#content {
+      margin: 0;
+    }
+
 </style>
 </head>
 
@@ -18,7 +29,14 @@ body {
 
 <h1>お盆: a text based-adventure presentation for JPNS 1001</h1>
 <p>Welcome to my JPNS 1001 Culture Project! Please play this on a device with an actual keyboard. Currently cannot be played on mobile devices.</p>
+
+<div id="scroll">
 <p id="content"></p> 
+</div>
+
+
+
+
 <!------------------------------------------------------------------------------------------------------------------------------------->
 
 <!-- TEXT SCRIPTS -->
