capital letter bugfix, added restart capability
hermitcraft :dog:

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
   color: white;
 }
 
-#scroll {
+#main {
   width: 95%;
       overflow-y: auto;
       padding: 10px;
@@ -27,10 +27,9 @@ body {
 
 <body onLoad="typeWriter('intro', 'content', 40, true)"> 
 
+<div id="main">
 <h1>お盆: a text based-adventure presentation for JPNS 1001</h1>
 <p>Welcome to my JPNS 1001 Culture Project! Please play this on a device with an actual keyboard. Currently cannot be played on mobile devices.</p>
-
-<div id="scroll">
 <p id="content"></p> 
 </div>
 
